# asm

./: README.md
char_count/: a.out  char_count.s  main.c
cmp_arr/: a.out  cmp_arr.s  main.c
cp_arr/: a.out  cp_arr.s  main.c
float/: a.out  main.c  mul.s
jumps/: a.out  jumps.s  main.c
loops/: a.out  loops.s  main.c
lut/: a.out  main.c  primes.s
matrix_mul/: CMakeLists.txt  a.out  main.c  mat_mul.s
mean/: a.out  main.c  mean.s
mul_div/: a.out  main.c  mul_div.s
out_ptr/: a.out  main.c  out_ptr.s
pointer/: a.out  main.c  pointer.s
register_exhaust/: a.out  main.c  reg_exhaust.s
rev_arr/: a.out  main.c  rev_arr.s
sum/: a.out  main.c  sum.s
